--- a/Survey-Creater/src/main/resources/application.properties
+++ b/Survey-Creater/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/survey?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=GMT&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mariadb://localhost:3306/survey?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=GMT&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=olonn
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 mybatis-plus.mapper-locations=classpath*:/mapper/*.xml
 mybatis-plus.config-location=classpath:/mybatis-setting.xml
